--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@
 
     <div class="container faq">
         <h2 class="head">frequently asked question</h2>
+
         <div class="faqs">
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -160,7 +162,7 @@
 
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined add">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -168,9 +170,11 @@
                         similique tenetur voluptatem!</p>
                 </div>
             </div>
+
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -178,9 +182,11 @@
                         similique tenetur voluptatem!</p>
                 </div>
             </div>
+
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -188,9 +194,10 @@
                         similique tenetur voluptatem!</p>
                 </div>
             </div>
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -198,9 +205,10 @@
                         similique tenetur voluptatem!</p>
                 </div>
             </div>
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -208,9 +216,11 @@
                         similique tenetur voluptatem!</p>
                 </div>
             </div>
+
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -218,9 +228,11 @@
                         similique tenetur voluptatem!</p>
                 </div>
             </div>
+
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -228,9 +240,11 @@
                         similique tenetur voluptatem!</p>
                 </div>
             </div>
+
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
@@ -238,9 +252,11 @@
                         similique tenetur voluptatem!</p>
                 </div>
             </div>
+
+
             <div class="faq-box">
                 <div class="question">
-                    <span class="material-symbols-outlined">add</span>
+                    <span class="material-symbols-outlined" id="add">add</span>
                     <h3>how to learn web dev</h3>
                 </div>
                 <div class="answer">
