--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="line1">
-                <i class="fa-light fa-envelopes-bulk"></i>
+                <i class="fa-sharp-duotone fa-solid fa-envelopes-bulk"></i>
                 <p>support@gmail.com</p>
             </div>
 
